Adding required Dynamic Link Libraries.
Those binaries are not generated at build time & may show errors for missing dynamic link libraries (dlls).

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,12 @@ DerivedDataCache/*
 
 # Local Plugins
 **/Plugins/**/Intermediate/*
+# Ignore ALL plugin Binaries folders...
 **/Plugins/**/Binaries/*
+
+# To keep thirdparty binaries for plugins
+!**/Plugins/**/Binaries/ThirdParty/
+!**/Plugins/**/Binaries/ThirdParty/**/*
 **/Plugins/**/Saved/*
 
 # Temp Files
